backend-conf/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: IMAGE_PLACEHOLDER
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /api/todos/healthcheck
              port: 3001
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              path: /api/todos/healthcheck
              port: 3001
