backend-conf/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-backend-dep
  namespace: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-backend
  strategy:
    canary:
      steps:
      - setWeight: 50
      - pause:
        duration: 30s
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: outisa/todo-application-backend:e38785331e0871a8f498731e5e76e896b358f3e1
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /api/todos/healthcheck
              port: 3001
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              path: /api/todos/healthcheck
              port: 3001
