backend-conf/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 2345
      name: local
      protocol: TCP
      targetPort: 3001 
    - port: 80
      name: http
      protocol: TCP
      targetPort: 3001
