backend-conf/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-backend-ing
  namespace: todo-app
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: todo-backend-svc
          servicePort: 2345
